<resources>
    <string name="app_name">手机观察器</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">action_settings</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>

</resources>
